# alyssa-extension

./: CHROME_STORE_GUIDE.md  DEPLOY.md  DESIGN_SYSTEM.md  EXTENSION_GUIDE.md  README.md  VECTOR_SEARCH_README.md  cosmic-theme.js  gatsby-config.js  mindful-coach-agent-prd.md  netlify.toml  package-lock.json  package.json  prd.md  resize-icon.html  theme-implementation-example.html  theme-migration-examples.md  vector-search-demo.html
.cache/: api-runner-browser-plugins.js  api-runner-ssr.js  babelState.json  schema.gql
backend/: .env.example  README.md  SUPABASE_SETUP.md  main.py  pyproject.toml  quick-start.sh  vector_affirmations.py
backend/supabase/: seed.sql
backend/supabase/migrations/: 20250801231108_initial_cosmic_schema.sql
data/: README.md  affirmations.json
docs/: ai-evolution-plan.md
extension/: README.md  cosmic-theme.css  manifest.json  test-mindful-coach.html  test-popup-coach.html
extension/css/: newtab.css  (+2 more)
js/: affirmation-manager.js
mockups/: README.md  affirmation-demo.html  cosmic-tab-main.html  index.html  premium-upgrade.html  settings-panel.html  theme-showcase.html
public/: app-4b201a30d870ccb8dff5.js  app-4b201a30d870ccb8dff5.js.map  app-5e288cdf8e19c22727c7.js  app-5e288cdf8e19c22727c7.js.map  app-7882adc3ff8fdf01512d.js  app-7882adc3ff8fdf01512d.js.map  app-b11b630c8c04c102aa02.js  app-b11b630c8c04c102aa02.js.map  app-de2ab73b330eb0bc2191.js  app-de2ab73b330eb0bc2191.js.map  chunk-map.json  commons-27f2484d85e3a51abb73.js  commons-27f2484d85e3a51abb73.js.map  commons-39c55f0836bc96d9bf12.js  commons-39c55f0836bc96d9bf12.js.map  (+49 more)
(+90 files in other folders)
