[project]
name = "cosmic-tab-coach-backend"
version = "1.0.0"
description = "Backend API for Cosmic Tab Coach Chrome Extension"
authors = [
    {name = "Cosmic Tab Coach", email = "hello@cosmic-tab-coach.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "supabase>=2.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "anthropic>=0.8.0",  # For Claude AI integration
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]